--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Status - Команда</title>
+	<title>Status - О нас</title>
 	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/swiper-bundle.min.css" />
@@ -62,295 +62,54 @@
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-					<li class="breadcrumb-item"><a href="team.html">Команда</a></li>
+					<li class="breadcrumb-item"><a href="about.html">О нас</a></li>
 				</ol>
 			</nav>
 		</div>
 
-		<section>
+		<section id="sec-11">
 			<div class="container">
-				<h1 class="inner">Команда</h1>
-				<div class="row row-cols-2 row-cols-sm-3 row-cols-lg-4 gx-0 gy-4">
-					<div>
-						<div class="master">
-							<img src="img/team/1.png">
-							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Елена</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Топ коллорист</div>
-								<div class="rating justify-content-center mb-2 mb-md-3">
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
-									<span class="f_08 light-gray">о мастере</span>
-								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-									<span class="f_08">Записаться</span>
-								</button>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="master">
-							<img src="img/team/4.png">
-							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Анастасия</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
-								<div class="rating justify-content-center mb-2 mb-md-3">
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
-									<span class="f_08 light-gray">о мастере</span>
-								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-									<span class="f_08">Записаться</span>
-								</button>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="master">
-							<img src="img/team/5.png">
-							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Максим</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер</div>
-								<div class="rating justify-content-center mb-2 mb-md-3">
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
-									<span class="f_08 light-gray">о мастере</span>
-								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-									<span class="f_08">Записаться</span>
-								</button>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="master">
-							<img src="img/team/1.png">
-							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Елена</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Топ коллорист</div>
-								<div class="rating justify-content-center mb-2 mb-md-3">
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
-									<span class="f_08 light-gray">о мастере</span>
-								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-									<span class="f_08">Записаться</span>
-								</button>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="master">
-							<img src="img/team/4.png">
-							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Анастасия</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
-								<div class="rating justify-content-center mb-2 mb-md-3">
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
-									<span class="f_08 light-gray">о мастере</span>
-								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-									<span class="f_08">Записаться</span>
-								</button>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="master">
-							<img src="img/team/5.png">
-							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Максим</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер</div>
-								<div class="rating justify-content-center mb-2 mb-md-3">
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
-									<span class="f_08 light-gray">о мастере</span>
-								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-									<span class="f_08">Записаться</span>
-								</button>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="master">
-							<img src="img/team/4.png">
-							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Анастасия</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
-								<div class="rating justify-content-center mb-2 mb-md-3">
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
-									<span class="f_08 light-gray">о мастере</span>
-								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-									<span class="f_08">Записаться</span>
-								</button>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="master">
-							<img src="img/team/5.png">
-							<div class="p-2 p-md-4">
-								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master.html">Максим</a></div>
-								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер</div>
-								<div class="rating justify-content-center mb-2 mb-md-3">
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
-									</svg>
-								</div>
-								<a href="master.html" class="btn_main btn_sm btn_2 mx-auto mb-2 mb-md-3">
-									<span class="f_08 light-gray">о мастере</span>
-								</a>
-								<button type="button" class="btn_main btn_sm btn_1 mx-auto">
-									<span class="f_08">Записаться</span>
-								</button>
-							</div>
-						</div>
-					</div>
+				<h1 class="inner">О нас</h1>
+				<div class="text">
+					<p><span class="fw_5">Салон Status</span> — модное пространство с высоким уровнем сервиса и приятной атмосферой. Сюда приходят, чтобы меняться и совершенствоваться. Здесь царит магия красоты, а высококлассные специалисты создают прекрасные образы.</p>
+					<p>Команду стилистов салона составляют профессиональные мастера с большим опытом, выпускники ведущих парикмахерских школ мира, которые продолжают постоянно повышать свой уровень.</p>
+					<p>Помимо стрижек, укладок, причёсок и окрашиваний в самых сложных техниках, к вашим услугам дневной, вечерний макияж, коррекция формы и цвета бровей, долговременная укладка бровей, наращивание ресниц и перманентный макияж.</p>
+					<p>В нашем салоне представлены ведущие бренды индустрии красоты: Loreal, Redken, Wella, Lebel, Metatron, Zo skin health by Obagi, Mediderma, New youth, Pevonia, Kevyn Aucoin, La Biosthetiqe, Fake Bake (моментальный загар) и многие други</p>
+					<p>Мастера ногтевого сервиса выполняют маникюр и педикюр любой сложности, работая на самых лучших продуктах сегмента.</p>
+					<p>Также в салоне можно получить несколько услуг одновременно, чтобы вы экономили свое время.</p>
+					<p>К Вашим услугам уникальные авторские программы для лица и тела от профессиональных массажистов и косметологов, лучшие мастера маникюра и педикюра, а также все ведущие бренды индустрии красоты.</p>
+					<p>Приходите в Status, и наша коанда создаст ваш савершенный образ.</p>
+					<p>Высокий уровень сервиса, приятная атмосфера, широкий, постоянно обновляющийся ассортимент услуг отвечают высоким требованием взыскательных клиентов.</p>
 				</div>
-				<button type="button" class="lightest-gray f_09 fw_5 bb_1 mx-auto mt-5">Показать еще</button>
-				<div class="row justify-content-end mt-4">
-					<div class="col-md-6">
-						<nav aria-label="Page navigation">
-							<ul class="pagination">
-								<li class="page-item"><a class="btn_main btn_xs f_08 btn_3" href="#">В начало</a></li>
-								<li class="page-item"><a class="page-link" href="#">...</a></li>
-								<li class="page-item"><a class="page-link" href="#">1</a></li>
-								<li class="page-item"><a class="page-link active" href="#">2</a></li>
-								<li class="page-item"><a class="page-link" href="#">3</a></li>
-								<li class="page-item"><a class="page-link" href="#">4</a></li>
-								<li class="page-item"><a class="page-link" href="#">5</a></li>
-								<li class="page-item"><a class="page-link" href="#">6</a></li>
-								<li class="page-item"><a class="page-link" href="#">...</a></li>
-								<li class="page-item"><a class="btn_main btn_xs f_08 btn_3" href="#">Дальше</a></li>
-							</ul>
-						</nav>
-					</div>
-					<div class="col-md-6 col-xxl-3 mt-3 mt-md-0">
-						<div class="d-flex align-items-center justify-content-center justify-content-md-end">
-							<div class="f_08 font-2 me-3">Перейти на страницу</div>
-							<input type="number" class="mini f_08 me-3">
-							<button type="button" class="f_08 btn_3 btn_main btn_xs">Перейти</button>
+				<div class="f_12 fw_6 text-center my-5">Галерея</div>
+				<div class="position-relative">
+					<div class="swiper-5">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<img src="img/img1.jpg" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/img2.jpg" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/img3.jpg" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/img4.jpg" alt="" class="img-example">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/img1.jpg" alt="" class="img-example">
+							</div>
+						</div>
+						<div class="swiper-button-prev">
+							<svg viewBox="0 0 24 62" xmlns="http://www.w3.org/2000/svg">
+								<path d="M21.1192 58.3865L2 30.6932L21.1192 3"/>
+							</svg>
+						</div>
+						<div class="swiper-button-next">
+							<svg viewBox="0 0 25 62" xmlns="http://www.w3.org/2000/svg">
+								<path d="M3.23486 58.3865L22.354 30.6932L3.23486 3"/>
+							</svg>
 						</div>
 					</div>
 				</div>
