--- a/offer-page.html
+++ b/offer-page.html
@@ -33,10 +33,10 @@
 						<ul>
 							<li><a href="services.html">Услуги</a></li>
 							<li><a href="offers.html">Акции</a></li>
-							<li><a href="">каталог</a></li>
-							<li><a href="">Команда</a></li>
-							<li><a href="">О нас</a></li>
-							<li><a href="">Контакты</a></li>
+							<li><a href="catalog.html">каталог</a></li>
+							<li><a href="team.html">Команда</a></li>
+							<li><a href="about.html">О нас</a></li>
+							<li><a href="contacts.html">Контакты</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -178,7 +178,7 @@
 
 	<footer class="d-block d-md-none mobile">
 		<div class="container h-100 d-flex justify-content-around align-items-center">
-			<a href="" class="active">
+			<a href="index.html" class="active">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M13.9999 7.22171L19.8333 12.4717V21.5834H17.4999V14.5834H10.4999V21.5834H8.16659V12.4717L13.9999 7.22171ZM13.9999 4.08337L2.33325 14.5834H5.83325V23.9167H12.8333V16.9167H15.1666V23.9167H22.1666V14.5834H25.6666L13.9999 4.08337Z"/>
 				</svg>
@@ -190,19 +190,19 @@
 				</svg>
 				<div>Запись</div>				
 			</a>
-			<a href="">
+			<a href="services.html">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M9.64 7.64C9.87 7.14 10 6.59 10 6C10 3.79 8.21 2 6 2C3.79 2 2 3.79 2 6C2 8.21 3.79 10 6 10C6.59 10 7.14 9.87 7.64 9.64L10 12L7.64 14.36C7.14 14.13 6.59 14 6 14C3.79 14 2 15.79 2 18C2 20.21 3.79 22 6 22C8.21 22 10 20.21 10 18C10 17.41 9.87 16.86 9.64 16.36L12 14L19 21H22V20L9.64 7.64ZM6 8C4.9 8 4 7.11 4 6C4 4.89 4.9 4 6 4C7.1 4 8 4.89 8 6C8 7.11 7.1 8 6 8ZM6 20C4.9 20 4 19.11 4 18C4 16.89 4.9 16 6 16C7.1 16 8 16.89 8 18C8 19.11 7.1 20 6 20ZM12 12.5C11.72 12.5 11.5 12.28 11.5 12C11.5 11.72 11.72 11.5 12 11.5C12.28 11.5 12.5 11.72 12.5 12C12.5 12.28 12.28 12.5 12 12.5ZM19 3L13 9L15 11L22 4V3H19Z"/>
 				</svg>
 				<div>Услуги</div>				
 			</a>
-			<a href="">
+			<a href="catalog.html">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M7 8.5H2V6.5H7V8.5ZM7 11.5H2V13.5H7V11.5ZM20.59 18.5L16.76 14.67C15.96 15.19 15.02 15.5 14 15.5C11.24 15.5 9 13.26 9 10.5C9 7.74 11.24 5.5 14 5.5C16.76 5.5 19 7.74 19 10.5C19 11.52 18.69 12.46 18.17 13.25L22 17.09L20.59 18.5ZM17 10.5C17 8.85 15.65 7.5 14 7.5C12.35 7.5 11 8.85 11 10.5C11 12.15 12.35 13.5 14 13.5C15.65 13.5 17 12.15 17 10.5ZM2 18.5H12V16.5H2V18.5Z"/>
 				</svg>
 				<div>Каталог</div>		
 			</a>
-			<a href="">
+			<a href="contacts.html">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M19.3333 15.2083C18.1875 15.2083 17.0875 15.025 16.0608 14.6858C15.9692 14.6583 15.8683 14.64 15.7767 14.64C15.5383 14.64 15.3092 14.7317 15.1258 14.9058L13.1092 16.9225C10.515 15.6025 8.38833 13.485 7.06833 10.8908L9.085 8.865C9.34167 8.6175 9.415 8.26 9.31417 7.93917C8.975 6.9125 8.79167 5.8125 8.79167 4.66667C8.79167 4.1625 8.37917 3.75 7.875 3.75H4.66667C4.1625 3.75 3.75 4.1625 3.75 4.66667C3.75 13.2742 10.7258 20.25 19.3333 20.25C19.8375 20.25 20.25 19.8375 20.25 19.3333V16.125C20.25 15.6208 19.8375 15.2083 19.3333 15.2083ZM5.61083 5.58333H6.98583C7.05 6.39 7.1875 7.1875 7.4075 7.9575L6.3075 9.06667C5.93167 7.9575 5.69333 6.79333 5.61083 5.58333ZM18.4167 18.3892C17.2067 18.3067 16.0333 18.0683 14.9333 17.6925L16.0333 16.5925C16.8125 16.8125 17.61 16.95 18.4167 17.005V18.3892ZM12 3.75V12.9167L14.75 10.1667H20.25V3.75H12ZM18.4167 8.33333H13.8333V5.58333H18.4167V8.33333Z"/>
 				</svg>
